--- a/page-gallery/index.html
+++ b/page-gallery/index.html
@@ -49,7 +49,25 @@
         </header>
         <main>
             <div class="photo-gallery">
-                <div class="column block-1">
+                <a data-description="Cool project 1" class="img" href="#"><img src="../img/1.png" alt="gallery item"></a>
+                <a data-description="Cool project 2" class="img" href="#"><img src="../img/6.png" alt="gallery item"></a>
+                <a data-description="Cool project 3" class="img" href="#"><img src="../img/2.png" alt="gallery item"></a>
+                <a data-description="Cool project 4" class="img" href="#"><img src="../img/3.png" alt="gallery item"></a>
+                <a data-description="Cool project 5" class="img" href="#"><img src="../img/4.png" alt="gallery item"></a>
+                <a data-description="Cool project 6" class="img" href="#"><img src="../img/5.png" alt="gallery item"></a>
+                <a data-description="Cool project 7" class="img" href="#"><img src="../img/7.png" alt="gallery item"></a>
+                <a data-description="Cool project 8" class="img" href="#"><img src="../img/8.png" alt="gallery item"></a>
+                <a data-description="Cool project 9" class="img" href="#"><img src="../img/9.png" alt="gallery item"></a>
+                <a data-description="Cool project 10" class="img" href="#"><img src="../img/10.png" alt="gallery item"></a>
+                <a data-description="Cool project 11" class="img" href="#"><img src="../img/12.png" alt="gallery item"></a>
+                <a data-description="Cool project 12" class="img" href="#"><img src="../img/11.png" alt="gallery item"></a>
+                <a data-description="Cool project 13" class="img" href="#"><img src="../img/13.png" alt="gallery item"></a>
+                <a data-description="Cool project 14" class="img" href="#"><img src="../img/14.png" alt="gallery item"></a>
+                <a data-description="Cool project 15" class="img" href="#"><img src="../img/17.png" alt="gallery item"></a>
+                <a data-description="Cool project 16" class="img" href="#"><img src="../img/15.png" alt="gallery item"></a>
+                <a data-description="Cool project 17" class="img" href="#"><img src="../img/16.png" alt="gallery item"></a>
+                <a data-description="Cool project 18" class="img" href="#"><img src="../img/18.png" alt="gallery item"></a>
+                <!-- <div class="column block-1">
                     <a data-description="Cool project 1" class="row img" href="#"><img src="../img/1.png" alt="gallery item"></a>
                     <a data-description="Cool project 2" class="row img" href="#"><img src="../img/6.png" alt="gallery item"></a>
                 </div>
@@ -88,7 +106,7 @@
                         <a data-description="Cool project 17" class="photo-gallery-width-2 img" href="#"><img src="../img/16.png" alt="gallery item"></a>
                     </div>
                     <a data-description="Cool project 18" class="img" href="#"><img src="../img/18.png" alt="gallery item"></a>
-                </div>
+                </div> -->
             </div>
         </main>
         <footer class="footer">
