Restyled header & added footer

--- a/index.html
+++ b/index.html
@@ -20,19 +20,20 @@
                 <div class="header-content">
                     <div class="block-logo">
                         <a href="#">
-                            <img class="logo-img" src="common/img/logoLV.png" alt="">
+                            <!-- <img class="logo-img" src="common/img/logoLV.png" alt=""> -->
                         </a>
-                        <a href="#">
-                            <h4 class="logo-caption">
+                        <a class="home-link" href="index.html">
+                            light visual <span class="hide-on-mobile">| design & architectural visualization</span>
+                            <!-- <h4 class="logo-caption">
                                 <span>Light Visual</span>
                                 <span class="secondary-logo-text">Architecture & Visualization Studio</span>
-                            </h4>
+                            </h4> -->
                         </a>
                     </div>
                     <div class="block-list-social">
                         <nav>
                             <ul class="list-menu">
-                                <li class="menu-item">
+                                <li class="active menu-item">
                                     <a href="#">Home</a>
                                 </li>
                                 <li class="menu-item">
@@ -98,9 +99,21 @@
         <footer class="footer">
             <div class="inner-container">
                 <div class="footer-content">
-                    <h5 class="footer-text">
-                        <span class="footer-text-year">2018 ©</span> Light Visual
-                    </h5>
+                    <span class="footer-text-year">© 2016-2018 Light Visual <span class="hide-on-mobile">Solutions. All rights reserved</span></span>
+                    <ul class="footer-social-links">
+                        <li class="social-link">
+                            <a href="https://behance.com" target="_blank" class="behance"><img src="../img/icons/behance.png"></a>
+                        </li>
+                        <li class="social-link">
+                            <a href="https://facebook.com" target="_blank" class="facebook"><img src="../img/icons/facebook.png"></a>
+                        </li>
+                        <li class="social-link">
+                            <a href="https://plus.google.com" target="_blank" class="google-plus"><img src="../img/icons/google-plus.png"></a>
+                        </li>
+                        <li class="social-link">
+                            <a href="https://instagram.com" target="_blank" class="instagram"><img src="../img/icons/instagram.png"></a>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </footer>
