--- a/page-gallery/index.html
+++ b/page-gallery/index.html
@@ -13,39 +13,40 @@
 <div class="wrapper">
     <div class="show-main-page" id="main-page">
         <header class="header">
-            <div class="inner-header-container">
-                <div class="header-content">
-                    <div class="block-logo">
-                        <a href="#">
-                            <img class="logo-img" src="../common/img/logoLV.png" alt="">
-                        </a>
-                        <a href="#">
-                            <h4 class="logo-caption">
-                                <span>Light Visual</span>
-                                <span class="secondary-logo-text">Architecture & Visualization Studio</span>
-                            </h4>
-                        </a>
+                <div class="inner-header-container">
+                        <div class="header-content">
+                            <div class="block-logo">
+                                <a href="#">
+                                    <!-- <img class="logo-img" src="common/img/logoLV.png" alt=""> -->
+                                </a>
+                                <a class="home-link" href="../index.html">
+                                    light visual <span class="hide-on-mobile">| design & architectural visualization</span>
+                                    <!-- <h4 class="logo-caption">
+                                        <span>Light Visual</span>
+                                        <span class="secondary-logo-text">Architecture & Visualization Studio</span>
+                                    </h4> -->
+                                </a>
+                            </div>
+                            <div class="block-list-social">
+                                <nav>
+                                    <ul class="list-menu">
+                                        <li class="menu-item">
+                                            <a href="../index.html">Home</a>
+                                        </li>
+                                        <li class="active menu-item">
+                                            <a href="page-gallery/index.html">Gallery</a>
+                                        </li>
+                                        <li class="menu-item">
+                                            <a href="page-info/index.html">Info</a>
+                                        </li>
+                                        <li class="menu-item">
+                                            <a href="page-contacts/index.html">Contacts</a>
+                                        </li>
+                                    </ul>
+                                </nav>
+                            </div>
+                        </div>
                     </div>
-                    <div class="block-list-social">
-                        <nav>
-                            <ul class="list-menu">
-                                <li class="menu-item">
-                                    <a href="../index.html">Home</a>
-                                </li>
-                                <li class="menu-item">
-                                    <a href="../page-gallery/index.html">Gallery</a>
-                                </li>
-                                <li class="menu-item">
-                                    <a href="../page-info/index.html">Info</a>
-                                </li>
-                                <li class="menu-item">
-                                    <a href="../page-contacts/index.html">Contacts</a>
-                                </li>
-                            </ul>
-                        </nav>
-                    </div>
-                </div>
-            </div>
         </header>
         <main>
             <div class="photo-gallery">
@@ -67,54 +68,26 @@
                 <a data-description="Cool project 16" class="img" href="#"><img src="../img/15.png" alt="gallery item"></a>
                 <a data-description="Cool project 17" class="img" href="#"><img src="../img/16.png" alt="gallery item"></a>
                 <a data-description="Cool project 18" class="img" href="#"><img src="../img/18.png" alt="gallery item"></a>
-                <!-- <div class="column block-1">
-                    <a data-description="Cool project 1" class="row img" href="#"><img src="../img/1.png" alt="gallery item"></a>
-                    <a data-description="Cool project 2" class="row img" href="#"><img src="../img/6.png" alt="gallery item"></a>
-                </div>
-                <div class="column block-2">
-                    <div class="row">
-                        <a data-description="Cool project 3" class="photo-gallery-width-2 img" href="#"><img src="../img/2.png" alt="gallery item"></a>
-                        <a data-description="Cool project 4" class="photo-gallery-width-3 img" href="#"><img  src="../img/3.png" alt="gallery item"></a>
-                    </div>
-                    <div class="row">
-                        <a data-description="Cool project 5" class="photo-gallery-width-3 img" href="#"><img src="../img/4.png" alt="gallery item"></a>
-                        <a data-description="Cool project 6" class="photo-gallery-width-2 img" href="#"><img  src="../img/5.png" alt="gallery item"></a>
-                    </div>
-                    <div class="row">
-                        <a data-description="Cool project 7" class="photo-gallery-width-2 img" href="#"><img src="../img/7.png" alt="gallery item"></a>
-                        <a data-description="Cool project 8" class="photo-gallery-width-3 img" href="#"><img src="../img/8.png" alt="gallery item"></a>
-                    </div>
-                </div>
-                <div class="column block-2">
-                    <div class="row">
-                        <a data-description="Cool project 9" class="photo-gallery-width-3 img" href="#"><img src="../img/9.png" alt="gallery item"></a>
-                        <a data-description="Cool project 10" class="photo-gallery-width-2 img" href="#"><img src="../img/10.png" alt="gallery item"></a>
-                    </div>
-                    <a data-description="Cool project 11" class="img" href="#"><img src="../img/12.png" alt="gallery item"></a>
-                </div>
-                <div class="column block-1 ">
-                    <a data-description="Cool project 12" class="img" href="#"><img src="../img/11.png" alt="gallery item"></a>
-                    <a data-description="Cool project 13" class="img" href="#"><img src="../img/13.png" alt="gallery item"></a>
-                </div>
-                <div class="column block-1 ">
-                    <a data-description="Cool project 14" class="img" href="#"><img src="../img/14.png" alt="gallery item"></a>
-                    <a data-description="Cool project 15" class="img" href="#"><img src="../img/17.png" alt="gallery item"></a>
-                </div>
-                <div class="column block-2 ">
-                    <div class="row">
-                        <a data-description="Cool project 16" class="photo-gallery-width-3 img" href="#"><img src="../img/15.png" alt="gallery item"></a>
-                        <a data-description="Cool project 17" class="photo-gallery-width-2 img" href="#"><img src="../img/16.png" alt="gallery item"></a>
-                    </div>
-                    <a data-description="Cool project 18" class="img" href="#"><img src="../img/18.png" alt="gallery item"></a>
-                </div> -->
             </div>
         </main>
         <footer class="footer">
             <div class="inner-container">
                 <div class="footer-content">
-                    <h5 class="footer-text">
-                        <span class="footer-text-year">2018 ©</span>Light Visual
-                    </h5>
+                    <span class="footer-text-year">© 2016-2018 Light Visual <span class="hide-on-mobile">Solutions. All rights reserved</span></span>
+                    <ul class="footer-social-links">
+                        <li class="social-link">
+                            <a href="https://behance.com" target="_blank" class="behance"><img src="../img/icons/behance.png"></a>
+                        </li>
+                        <li class="social-link">
+                            <a href="https://facebook.com" target="_blank" class="facebook"><img src="../img/icons/facebook.png"></a>
+                        </li>
+                        <li class="social-link">
+                            <a href="https://plus.google.com" target="_blank" class="google-plus"><img src="../img/icons/google-plus.png"></a>
+                        </li>
+                        <li class="social-link">
+                            <a href="https://instagram.com" target="_blank" class="instagram"><img src="../img/icons/instagram.png"></a>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </footer>
