Added team & contacts pages

--- a/contacts.html
+++ b/contacts.html
@@ -9,7 +9,7 @@
 
     <link rel="stylesheet" href="common/style/reset.css">
     <link rel="stylesheet" href="common/style/common.css">
-    <link rel="stylesheet" href="style/home.css">
+    <link rel="stylesheet" href="style/contacts.css">
     <title>Home</title>
 </head>
 <body id="body" class="no-scroll">
@@ -28,7 +28,7 @@
                     <div class="block-list-social">
                         <nav>
                             <ul class="list-menu">
-                                <li class="active menu-item">
+                                <li class="menu-item">
                                     <a href="index.html">Home</a>
                                 </li>
                                 <li class="menu-item">
@@ -37,7 +37,7 @@
                                 <li class="menu-item">
                                     <a href="team.html">Team</a>
                                 </li>
-                                <li class="menu-item">
+                                <li class="active menu-item">
                                     <a href="contacts.html">Contacts</a>
                                 </li>
                             </ul>
@@ -47,49 +47,23 @@
             </div>
         </header>
         <main>
-            <div class="slider-menu">
-                <div><img class="slider-img" src="img/slider_1.png"/>
-                <p class="banner-center-content banner-title text-style">Lorem Ipsum</p>
-                <p class="banner-center-content banner-text text-style">Dolor sit Amet</p>
-                <!--<p class="wanna-know-more"><a class="wanna-know-more-a text-style" href="#">Узнать больше</a></p>-->
-            </div>
-                <div><img class="slider-img" src="img/slider_2.png"/>
-                    <p class="banner-center-content banner-title text-style">Lorem Ipsum</p>
-                    <p class="banner-center-content banner-text text-style">Dolor sit Amet</p>
-                    <!--<p class="wanna-know-more"><a class="wanna-know-more-a text-style" href="#">Узнать больше</a></p>-->
+            <div class="contacts-banner"></div>
+            <h3 class="company-title">LIGHT VISUAL</h3>
+            <div class="contacts-list">
+                <div class="contact-item">
+                    <h3 class="item-name">LIGHT VISUAL SOLUTIONS ZRT</h3>
+                    <p class="item-description">minsk pl. independence </p>
                 </div>
-                <div><img class="slider-img" src="img/slider_1.png"/>
-                    <p class="banner-center-content banner-title text-style">Lorem Ipsum</p>
-                    <p class="banner-center-content banner-text text-style">Dolor sit Amet</p>
-                    <!--<p class="wanna-know-more"><a class="wanna-know-more-a text-style" href="#">Узнать больше</a></p>-->
+                <div class="contact-item">
+                    <h3 class="item-name">SALES AND PROJECT INFORMATION</h3>
+                    <p class="item-description">info.lightvisual@gmail.com</p>
                 </div>
-                <div><img class="slider-img" src="img/slider_2.png"/>
-                    <p class="banner-center-content banner-title text-style">Lorem Ipsum</p>
-                    <p class="banner-center-content banner-text text-style">Dolor sit Amet</p>
-                    <!--<p class="wanna-know-more"><a class="wanna-know-more-a text-style" href="#">Узнать больше</a></p>-->
-                </div>
-                <div><img class="slider-img" src="img/slider_1.png"/>
-                    <p class="banner-center-content banner-title text-style">Lorem Ipsum</p>
-                    <p class="banner-center-content banner-text text-style">Dolor sit Amet</p>
-                    <!--<p class="wanna-know-more"><a class="wanna-know-more-a text-style" href="#">Узнать больше</a></p>-->
-                </div>
-                <div><img class="slider-img" src="img/slider_2.png"/>
-                    <p class="banner-center-content banner-title text-style">Lorem Ipsum</p>
-                    <p class="banner-center-content banner-text text-style">Dolor sit Amet</p>
-                    <!--<p class="wanna-know-more"><a class="wanna-know-more-a text-style" href="#">Узнать больше</a></p>-->
-                </div>
-                <div><img class="slider-img" src="img/slider_1.png"/>
-                    <p class="banner-center-content banner-title text-style">Lorem Ipsum</p>
-                    <p class="banner-center-content banner-text text-style">Dolor sit Amet</p>
-                    <!--<p class="wanna-know-more"><a class="wanna-know-more-a text-style" href="#">Узнать больше</a></p>-->
-                </div>
-                <div><img class="slider-img" src="img/slider_2.png"/>
-                    <p class="banner-center-content banner-title text-style">Lorem Ipsum</p>
-                    <p class="banner-center-content banner-text text-style">Dolor sit Amet</p>
-                    <!--<p class="wanna-know-more"><a class="wanna-know-more-a text-style" href="#">Узнать больше</a></p>-->
+                <div class="contact-item">
+                    <h3 class="item-name">GENERAL INFORMATION</h3>
+                    <p class="item-description">info.lightvisual@gmail.com</p>
+                    <p class="item-description"><a href="tel:+375298787778">+375 29 878-77-78</a></p>
                 </div>
             </div>
-
         </main>
         <footer class="footer">
             <div class="inner-container">
@@ -114,9 +88,6 @@
         </footer>
     </div>
 </div>
-
-
-
 
 <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
 <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
