--- a/gallery.html
+++ b/gallery.html
@@ -4,49 +4,44 @@
     <meta charset="UTF-8">
     <link href="https://fonts.googleapis.com/css?family=Roboto&amp;subset=cyrillic" rel="stylesheet">
 
-    <link rel="stylesheet" href="../common/style/reset.css">
-    <link rel="stylesheet" href="../common/style/commonStyle.css">
-    <link rel="stylesheet" href="style/galleryStyle.css">
+    <link rel="stylesheet" href="common/style/reset.css">
+    <link rel="stylesheet" href="common/style/common.css">
+    <link rel="stylesheet" href="style/gallery.css">
     <title>Gallery</title>
 </head>
 <body id="body" class="no-scroll">
 <div class="wrapper">
     <div class="show-main-page" id="main-page">
         <header class="header">
-                <div class="inner-header-container">
-                        <div class="header-content">
-                            <div class="block-logo">
-                                <a href="#">
-                                    <!-- <img class="logo-img" src="common/img/logoLV.png" alt=""> -->
-                                </a>
-                                <a class="home-link" href="../index.html">
-                                    light visual <span class="hide-on-mobile">| design & architectural visualization</span>
-                                    <!-- <h4 class="logo-caption">
-                                        <span>Light Visual</span>
-                                        <span class="secondary-logo-text">Architecture & Visualization Studio</span>
-                                    </h4> -->
-                                </a>
-                            </div>
-                            <div class="block-list-social">
-                                <nav>
-                                    <ul class="list-menu">
-                                        <li class="menu-item">
-                                            <a href="../index.html">Home</a>
-                                        </li>
-                                        <li class="active menu-item">
-                                            <a href="page-gallery/index.html">Gallery</a>
-                                        </li>
-                                        <li class="menu-item">
-                                            <a href="page-info/index.html">Info</a>
-                                        </li>
-                                        <li class="menu-item">
-                                            <a href="page-contacts/index.html">Contacts</a>
-                                        </li>
-                                    </ul>
-                                </nav>
-                            </div>
-                        </div>
+            <div class="inner-header-container">
+                <div class="header-content">
+                    <div class="block-logo">
+                        <a href="#">
+                        </a>
+                        <a class="home-link" href="index.html">
+                            light visual <span class="hide-on-mobile">| design & architectural visualization</span>
+                        </a>
                     </div>
+                    <div class="block-list-social">
+                        <nav>
+                            <ul class="list-menu">
+                                <li class="menu-item">
+                                    <a href="index.html">Home</a>
+                                </li>
+                                <li class="active menu-item">
+                                    <a href="gallery.html">Gallery</a>
+                                </li>
+                                <li class="menu-item">
+                                    <a href="team.html">Team</a>
+                                </li>
+                                <li class="menu-item">
+                                    <a href="contacts.html">Contacts</a>
+                                </li>
+                            </ul>
+                        </nav>
+                    </div>
+                </div>
+            </div>
         </header>
         <main>
             <div class="photo-gallery">
