--- a/team.html
+++ b/team.html
@@ -9,7 +9,7 @@
 
     <link rel="stylesheet" href="common/style/reset.css">
     <link rel="stylesheet" href="common/style/common.css">
-    <link rel="stylesheet" href="style/home.css">
+    <link rel="stylesheet" href="style/team.css">
     <title>Home</title>
 </head>
 <body id="body" class="no-scroll">
@@ -28,13 +28,13 @@
                     <div class="block-list-social">
                         <nav>
                             <ul class="list-menu">
-                                <li class="active menu-item">
+                                <li class="menu-item">
                                     <a href="index.html">Home</a>
                                 </li>
                                 <li class="menu-item">
                                     <a href="gallery.html">Gallery</a>
                                 </li>
-                                <li class="menu-item">
+                                <li class="active menu-item">
                                     <a href="team.html">Team</a>
                                 </li>
                                 <li class="menu-item">
@@ -47,49 +47,58 @@
             </div>
         </header>
         <main>
-            <div class="slider-menu">
-                <div><img class="slider-img" src="img/slider_1.png"/>
-                <p class="banner-center-content banner-title text-style">Lorem Ipsum</p>
-                <p class="banner-center-content banner-text text-style">Dolor sit Amet</p>
-                <!--<p class="wanna-know-more"><a class="wanna-know-more-a text-style" href="#">Узнать больше</a></p>-->
+            <div class="teammates">
+                <div class="teammate">
+                    <img class="team-member-photo" src="img/team-member.jpg">
+                    <div class="member-info">
+                        <h3 class="member-name">Big Nigga</h3>
+                        <span class="member-position">CEO</span>
+                    </div>
+                </div>
+                <div class="teammate">
+                    <img class="team-member-photo" src="img/team-member.jpg">
+                    <div class="member-info">
+                        <h3 class="member-name">Big Nigga</h3>
+                        <span class="member-position">CEO</span>
+                    </div>
+                </div>
+                <div class="teammate">
+                    <img class="team-member-photo" src="img/team-member.jpg">
+                    <div class="member-info">
+                        <h3 class="member-name">Big Nigga</h3>
+                        <span class="member-position">CEO</span>
+                    </div>
+                </div>
+                <div class="teammate">
+                    <img class="team-member-photo" src="img/team-member.jpg">
+                    <div class="member-info">
+                        <h3 class="member-name">Big Nigga</h3>
+                        <span class="member-position">CEO</span>
+                    </div>
+                </div>
+                <div class="teammate">
+                    <img class="team-member-photo" src="img/team-member.jpg">
+                    <div class="member-info">
+                        <h3 class="member-name">Big Nigga</h3>
+                        <span class="member-position">CEO</span>
+                    </div>
+                </div>
+                <div class="teammate">
+                    <img class="team-member-photo" src="img/team-member.jpg">
+                    <div class="member-info">
+                        <h3 class="member-name">Big Nigga</h3>
+                        <span class="member-position">CEO</span>
+                    </div>
+                </div>
             </div>
-                <div><img class="slider-img" src="img/slider_2.png"/>
-                    <p class="banner-center-content banner-title text-style">Lorem Ipsum</p>
-                    <p class="banner-center-content banner-text text-style">Dolor sit Amet</p>
-                    <!--<p class="wanna-know-more"><a class="wanna-know-more-a text-style" href="#">Узнать больше</a></p>-->
-                </div>
-                <div><img class="slider-img" src="img/slider_1.png"/>
-                    <p class="banner-center-content banner-title text-style">Lorem Ipsum</p>
-                    <p class="banner-center-content banner-text text-style">Dolor sit Amet</p>
-                    <!--<p class="wanna-know-more"><a class="wanna-know-more-a text-style" href="#">Узнать больше</a></p>-->
-                </div>
-                <div><img class="slider-img" src="img/slider_2.png"/>
-                    <p class="banner-center-content banner-title text-style">Lorem Ipsum</p>
-                    <p class="banner-center-content banner-text text-style">Dolor sit Amet</p>
-                    <!--<p class="wanna-know-more"><a class="wanna-know-more-a text-style" href="#">Узнать больше</a></p>-->
-                </div>
-                <div><img class="slider-img" src="img/slider_1.png"/>
-                    <p class="banner-center-content banner-title text-style">Lorem Ipsum</p>
-                    <p class="banner-center-content banner-text text-style">Dolor sit Amet</p>
-                    <!--<p class="wanna-know-more"><a class="wanna-know-more-a text-style" href="#">Узнать больше</a></p>-->
-                </div>
-                <div><img class="slider-img" src="img/slider_2.png"/>
-                    <p class="banner-center-content banner-title text-style">Lorem Ipsum</p>
-                    <p class="banner-center-content banner-text text-style">Dolor sit Amet</p>
-                    <!--<p class="wanna-know-more"><a class="wanna-know-more-a text-style" href="#">Узнать больше</a></p>-->
-                </div>
-                <div><img class="slider-img" src="img/slider_1.png"/>
-                    <p class="banner-center-content banner-title text-style">Lorem Ipsum</p>
-                    <p class="banner-center-content banner-text text-style">Dolor sit Amet</p>
-                    <!--<p class="wanna-know-more"><a class="wanna-know-more-a text-style" href="#">Узнать больше</a></p>-->
-                </div>
-                <div><img class="slider-img" src="img/slider_2.png"/>
-                    <p class="banner-center-content banner-title text-style">Lorem Ipsum</p>
-                    <p class="banner-center-content banner-text text-style">Dolor sit Amet</p>
-                    <!--<p class="wanna-know-more"><a class="wanna-know-more-a text-style" href="#">Узнать больше</a></p>-->
+            <div class="about">
+                <h2 class="company-title">LIGHT VISUAL</h2>
+                <div class="description">
+                    <p>THIS IS A CREATIVE STUDIO THAT SPECIALIZES IN ARCHITECTURAL PHOTO-REALISTIC</p>
+                    <p>CG IMAGERY. PHOTOREALISTIC VISUALIZATION IS OUR WAY OF HONOURING</p>
+                    <p>EACH ARCHITECT AND EACH PIECE OF ARCHITECTURE.</p>
                 </div>
             </div>
-
         </main>
         <footer class="footer">
             <div class="inner-container">
@@ -114,9 +123,6 @@
         </footer>
     </div>
 </div>
-
-
-
 
 <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
 <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
