Fixed images path in gallery

--- a/gallery.html
+++ b/gallery.html
@@ -45,24 +45,24 @@
         </header>
         <main>
             <div class="photo-gallery">
-                <a data-description="Cool project 1" class="img" href="#"><img src="../img/1.png" alt="gallery item"></a>
-                <a data-description="Cool project 2" class="img" href="#"><img src="../img/6.png" alt="gallery item"></a>
-                <a data-description="Cool project 3" class="img" href="#"><img src="../img/2.png" alt="gallery item"></a>
-                <a data-description="Cool project 4" class="img" href="#"><img src="../img/3.png" alt="gallery item"></a>
-                <a data-description="Cool project 5" class="img" href="#"><img src="../img/4.png" alt="gallery item"></a>
-                <a data-description="Cool project 6" class="img" href="#"><img src="../img/5.png" alt="gallery item"></a>
-                <a data-description="Cool project 7" class="img" href="#"><img src="../img/7.png" alt="gallery item"></a>
-                <a data-description="Cool project 8" class="img" href="#"><img src="../img/8.png" alt="gallery item"></a>
-                <a data-description="Cool project 9" class="img" href="#"><img src="../img/9.png" alt="gallery item"></a>
-                <a data-description="Cool project 10" class="img" href="#"><img src="../img/10.png" alt="gallery item"></a>
-                <a data-description="Cool project 11" class="img" href="#"><img src="../img/12.png" alt="gallery item"></a>
-                <a data-description="Cool project 12" class="img" href="#"><img src="../img/11.png" alt="gallery item"></a>
-                <a data-description="Cool project 13" class="img" href="#"><img src="../img/13.png" alt="gallery item"></a>
-                <a data-description="Cool project 14" class="img" href="#"><img src="../img/14.png" alt="gallery item"></a>
-                <a data-description="Cool project 15" class="img" href="#"><img src="../img/17.png" alt="gallery item"></a>
-                <a data-description="Cool project 16" class="img" href="#"><img src="../img/15.png" alt="gallery item"></a>
-                <a data-description="Cool project 17" class="img" href="#"><img src="../img/16.png" alt="gallery item"></a>
-                <a data-description="Cool project 18" class="img" href="#"><img src="../img/18.png" alt="gallery item"></a>
+                <a data-description="Cool project 1" class="img" href="#"><img src="img/1.png" alt="gallery item"></a>
+                <a data-description="Cool project 2" class="img" href="#"><img src="img/6.png" alt="gallery item"></a>
+                <a data-description="Cool project 3" class="img" href="#"><img src="img/2.png" alt="gallery item"></a>
+                <a data-description="Cool project 4" class="img" href="#"><img src="img/3.png" alt="gallery item"></a>
+                <a data-description="Cool project 5" class="img" href="#"><img src="img/4.png" alt="gallery item"></a>
+                <a data-description="Cool project 6" class="img" href="#"><img src="img/5.png" alt="gallery item"></a>
+                <a data-description="Cool project 7" class="img" href="#"><img src="img/7.png" alt="gallery item"></a>
+                <a data-description="Cool project 8" class="img" href="#"><img src="img/8.png" alt="gallery item"></a>
+                <a data-description="Cool project 9" class="img" href="#"><img src="img/9.png" alt="gallery item"></a>
+                <a data-description="Cool project 10" class="img" href="#"><img src="img/10.png" alt="gallery item"></a>
+                <a data-description="Cool project 11" class="img" href="#"><img src="img/12.png" alt="gallery item"></a>
+                <a data-description="Cool project 12" class="img" href="#"><img src="img/11.png" alt="gallery item"></a>
+                <a data-description="Cool project 13" class="img" href="#"><img src="img/13.png" alt="gallery item"></a>
+                <a data-description="Cool project 14" class="img" href="#"><img src="img/14.png" alt="gallery item"></a>
+                <a data-description="Cool project 15" class="img" href="#"><img src="img/17.png" alt="gallery item"></a>
+                <a data-description="Cool project 16" class="img" href="#"><img src="img/15.png" alt="gallery item"></a>
+                <a data-description="Cool project 17" class="img" href="#"><img src="img/16.png" alt="gallery item"></a>
+                <a data-description="Cool project 18" class="img" href="#"><img src="img/18.png" alt="gallery item"></a>
             </div>
         </main>
         <footer class="footer">
@@ -71,16 +71,16 @@
                     <span class="footer-text-year">© 2016-2018 Light Visual <span class="hide-on-mobile">Solutions. All rights reserved</span></span>
                     <ul class="footer-social-links">
                         <li class="social-link">
-                            <a href="https://behance.com" target="_blank" class="behance"><img src="../img/icons/behance.png"></a>
+                            <a href="https://behance.com" target="_blank" class="behance"><img src="img/icons/behance.png"></a>
                         </li>
                         <li class="social-link">
-                            <a href="https://facebook.com" target="_blank" class="facebook"><img src="../img/icons/facebook.png"></a>
+                            <a href="https://facebook.com" target="_blank" class="facebook"><img src="img/icons/facebook.png"></a>
                         </li>
                         <li class="social-link">
-                            <a href="https://plus.google.com" target="_blank" class="google-plus"><img src="../img/icons/google-plus.png"></a>
+                            <a href="https://plus.google.com" target="_blank" class="google-plus"><img src="img/icons/google-plus.png"></a>
                         </li>
                         <li class="social-link">
-                            <a href="https://instagram.com" target="_blank" class="instagram"><img src="../img/icons/instagram.png"></a>
+                            <a href="https://instagram.com" target="_blank" class="instagram"><img src="img/icons/instagram.png"></a>
                         </li>
                     </ul>
                 </div>
