--- a/index.html
+++ b/index.html
@@ -97,16 +97,16 @@
                     <span class="footer-text-year">© 2016-2018 Light Visual <span class="hide-on-mobile">Solutions. All rights reserved</span></span>
                     <ul class="footer-social-links">
                         <li class="social-link">
-                            <a href="https://behance.com" target="_blank" class="behance"><img src="../img/icons/behance.png"></a>
+                            <a href="https://behance.com" target="_blank" class="behance"><img src="img/icons/behance.png"></a>
                         </li>
                         <li class="social-link">
-                            <a href="https://facebook.com" target="_blank" class="facebook"><img src="../img/icons/facebook.png"></a>
+                            <a href="https://facebook.com" target="_blank" class="facebook"><img src="img/icons/facebook.png"></a>
                         </li>
                         <li class="social-link">
-                            <a href="https://plus.google.com" target="_blank" class="google-plus"><img src="../img/icons/google-plus.png"></a>
+                            <a href="https://plus.google.com" target="_blank" class="google-plus"><img src="img/icons/google-plus.png"></a>
                         </li>
                         <li class="social-link">
-                            <a href="https://instagram.com" target="_blank" class="instagram"><img src="../img/icons/instagram.png"></a>
+                            <a href="https://instagram.com" target="_blank" class="instagram"><img src="img/icons/instagram.png"></a>
                         </li>
                     </ul>
                 </div>
