Made company title black

--- a/gallery.html
+++ b/gallery.html
@@ -19,7 +19,7 @@
                         <a href="#">
                         </a>
                         <a class="home-link" href="index.html">
-                            light visual <span class="hide-on-mobile">| design & architectural visualization</span>
+                            <span class="header-company-name">light visual</span> <span class="hide-on-mobile">| design & architectural visualization</span>
                         </a>
                     </div>
                     <div class="block-list-social">
